Optimize code and refactor VanillaPlugin