@@ -1,14 +1,28 @@
 package dev.emi.emi.api;
 
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import net.minecraft.entity.player.EntityPlayer;
+import org.jetbrains.annotations.Nullable;
+
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
+
 import cpw.mods.fml.relauncher.Side;
 import cpw.mods.fml.relauncher.SideOnly;
 import dev.emi.emi.VanillaPlugin;
 import dev.emi.emi.api.recipe.EmiRecipe;
 import dev.emi.emi.api.recipe.EmiRecipeCategory;
 import dev.emi.emi.api.recipe.EmiRecipeManager;
-import dev.emi.emi.api.stack.*;
+import dev.emi.emi.api.stack.EmiIngredient;
+import dev.emi.emi.api.stack.EmiStack;
+import dev.emi.emi.api.stack.EmiStackInteraction;
+import dev.emi.emi.api.stack.ListEmiIngredient;
+import dev.emi.emi.api.stack.TagEmiIngredient;
 import dev.emi.emi.bom.BoM;
 import dev.emi.emi.config.EmiConfig;
 import dev.emi.emi.recipe.EmiSyntheticIngredientRecipe;
@@ -21,22 +35,13 @@ import dev.emi.emi.runtime.EmiSidebars;
 import dev.emi.emi.screen.BoMScreen;
 import dev.emi.emi.screen.EmiScreenManager;
 import dev.emi.emi.screen.RecipeScreen;
-import net.minecraft.*;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiScreen;
 import net.minecraft.client.gui.inventory.GuiContainer;
 import net.minecraft.client.gui.inventory.GuiInventory;
-import net.minecraft.entity.player.EntityPlayer;
-import org.jetbrains.annotations.ApiStatus;
-import org.jetbrains.annotations.Nullable;
-
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class EmiApi {
+	private static final Minecraft client = Minecraft.getMinecraft();
 
 	public static List<EmiStack> getIndexStacks() {
 		return EmiStackList.stacks;
@@ -71,9 +76,8 @@ public class EmiApi {
 	/**
 	 * Gets the currently hovered EmiIngredient at the provided screen coordinates,
 	 * or {@link EmiStack#EMPTY} if none.
-	 *
 	 * @param includeStandard Whether to include the EmiIngredient representation of
-	 *                        standard stacks in slots or otherwise provided to EMI.
+	 * 	standard stacks in slots or otherwise provided to EMI.
 	 */
 	public static EmiStackInteraction getHoveredStack(int mouseX, int mouseY, boolean includeStandard) {
 		return EmiScreenManager.getHoveredStack(mouseX, mouseY, includeStandard);
@@ -81,9 +85,8 @@ public class EmiApi {
 
 	/**
 	 * Gets the currently hovered EmiIngredient at the mouse or {@link EmiStack#EMPTY} if none.
-	 *
 	 * @param includeStandard Whether to include the EmiIngredient representation of
-	 *                        standard stacks in slots or otherwise provided to EMI.
+	 * 	standard stacks in slots or otherwise provided to EMI.
 	 */
 	public static EmiStackInteraction getHoveredStack(boolean includeStandard) {
 		return EmiScreenManager.getHoveredStack(EmiScreenManager.lastMouseX, EmiScreenManager.lastMouseY, includeStandard);
@@ -93,10 +96,8 @@ public class EmiApi {
 	 * @return Recipe context associated with specific ingredient implementations.
 	 * This could be favorites, craftables, or something else.
 	 */
-	@ApiStatus.Experimental
 	public static @Nullable EmiRecipe getRecipeContext(EmiIngredient stack) {
-		if (stack instanceof EmiFavorite) {
-			EmiFavorite fav = (EmiFavorite) stack;
+		if (stack instanceof EmiFavorite fav) {
 			return fav.getRecipe();
 		}
 		return null;
@@ -104,14 +105,12 @@ public class EmiApi {
 
 	@SideOnly(Side.CLIENT)
 	public static GuiContainer getHandledScreen() {
-		GuiScreen s = Minecraft.getMinecraft().currentScreen;
+		GuiScreen s = client.currentScreen;
 		if (s instanceof GuiContainer container) {
 			return container;
-		}
-		else if (s instanceof RecipeScreen rs) {
+		} else if (s instanceof RecipeScreen rs) {
 			return rs.old;
-		}
-		else if (s instanceof BoMScreen bs) {
+		} else if (s instanceof BoMScreen bs) {
 			return bs.old;
 		}
 		return null;
@@ -120,7 +119,7 @@ public class EmiApi {
     @SideOnly(Side.CLIENT)
 	public static void displayAllRecipes() {
 		EmiRecipeManager manager = EmiApi.getRecipeManager();
-		setPages(manager.getCategories().stream().collect(Collectors.toMap(c -> c, manager::getRecipes)), EmiStack.EMPTY);
+		setPages(manager.getCategories().stream().collect(Collectors.toMap(c -> c, c -> manager.getRecipes(c))), EmiStack.EMPTY);
 	}
 
     @SideOnly(Side.CLIENT)
@@ -135,27 +134,19 @@ public class EmiApi {
 
     @SideOnly(Side.CLIENT)
 	public static void displayRecipes(EmiIngredient stack) {
-		if (stack instanceof EmiFavorite) {
-			EmiFavorite fav = (EmiFavorite) stack;
+		if (stack instanceof EmiFavorite fav) {
 			stack = fav.getStack();
 		}
-		if (stack instanceof TagEmiIngredient) {
-			TagEmiIngredient tag = (TagEmiIngredient) stack;
+		if (stack instanceof TagEmiIngredient tag) {
 			for (EmiRecipe recipe : getRecipeManager().getRecipes(VanillaPlugin.TAG)) {
-				if (recipe instanceof EmiTagRecipe) {
-					EmiTagRecipe tr = (EmiTagRecipe) recipe;
-					if (tr.key.equals(tag.key)) {
-						setPages(Collections.singletonMap(VanillaPlugin.TAG, Collections.singletonList(recipe)), stack);
-						break;
-					}
+				if (recipe instanceof EmiTagRecipe tr && tr.key.equals(tag.key)) {
+					setPages(Collections.singletonMap(VanillaPlugin.TAG, com.rewindmc.retroemi.shim.java.List.of(recipe)), stack);
+					break;
 				}
 			}
-		}
-		else if (stack instanceof ListEmiIngredient) {
-			ListEmiIngredient list = (ListEmiIngredient) stack;
+		} else if (stack instanceof ListEmiIngredient list) {
 			setPages(Collections.singletonMap(VanillaPlugin.INGREDIENT, Collections.singletonList(new EmiSyntheticIngredientRecipe(stack))), stack);
-		}
-		else if (stack.getEmiStacks().size() == 1) {
+		} else if (stack.getEmiStacks().size() == 1) {
 			EmiStack es = stack.getEmiStacks().get(0);
 			setPages(mapRecipes(pruneSources(EmiApi.getRecipeManager().getRecipesByOutput(es), es)), stack);
 			focusRecipe(BoM.getRecipe(es));
@@ -166,53 +157,46 @@ public class EmiApi {
 	public static void displayUses(EmiIngredient stack) {
 		if (!stack.isEmpty()) {
 			EmiStack zero = stack.getEmiStacks().get(0);
-			Map<EmiRecipeCategory, List<EmiRecipe>> map = mapRecipes(Stream.concat(pruneUses(getRecipeManager().getRecipesByInput(zero), stack).stream(),
-					EmiRecipes.byWorkstation.getOrDefault(zero, Collections.emptyList()).stream()).distinct().collect(Collectors.toList()));
+			Map<EmiRecipeCategory, List<EmiRecipe>> map
+				= mapRecipes(Stream.concat(
+						pruneUses(getRecipeManager().getRecipesByInput(zero), stack).stream(),
+						EmiRecipes.byWorkstation.getOrDefault(zero, Collections.emptyList()).stream()).distinct().collect(Collectors.toList()));
 			setPages(map, stack);
 		}
 	}
 
     @SideOnly(Side.CLIENT)
 	public static void viewRecipeTree() {
-		if (Minecraft.getMinecraft().currentScreen == null) {
+		if (client.currentScreen == null) {
 			//noinspection RedundantCast
-			Minecraft.getMinecraft().displayGuiScreen(new GuiInventory((EntityPlayer) (Object) Minecraft.getMinecraft().thePlayer));
+			client.displayGuiScreen(new GuiInventory((EntityPlayer) (Object) client.thePlayer));
 		}
-		GuiScreen s = Minecraft.getMinecraft().currentScreen;
-		if (s instanceof GuiContainer) {
-			GuiContainer hs = (GuiContainer) s;
+		GuiScreen s = client.currentScreen;
+		if (s instanceof GuiContainer hs) {
 			push();
-			Minecraft.getMinecraft().displayGuiScreen(new BoMScreen(hs));
-		}
-		else if (s instanceof RecipeScreen) {
-			RecipeScreen rs = (RecipeScreen) s;
+			client.displayGuiScreen(new BoMScreen(hs));
+		} else if (s instanceof RecipeScreen rs) {
 			push();
-			Minecraft.getMinecraft().displayGuiScreen(new BoMScreen(rs.old));
+			client.displayGuiScreen(new BoMScreen(rs.old));
 		}
 	}
 
     @SideOnly(Side.CLIENT)
 	public static void focusRecipe(EmiRecipe recipe) {
-		GuiScreen s = Minecraft.getMinecraft().currentScreen;
-		if (s instanceof RecipeScreen) {
-			RecipeScreen rs = (RecipeScreen) s;
+		if (client.currentScreen instanceof RecipeScreen rs) {
 			rs.focusRecipe(recipe);
 		}
 	}
 
     @SideOnly(Side.CLIENT)
 	private static void push() {
-		GuiScreen s = Minecraft.getMinecraft().currentScreen;
-		if (s instanceof RecipeScreen) {
-			RecipeScreen rs = (RecipeScreen) s;
+		if (client.currentScreen instanceof RecipeScreen rs) {
 			EmiHistory.push(rs);
-		}
-		else if (s instanceof BoMScreen) {
-			BoMScreen bs = (BoMScreen) s;
+		} else if (client.currentScreen instanceof BoMScreen bs) {
 			EmiHistory.push(bs);
-		}
-		else {
+		} else {
 			EmiHistory.clear();
+			EmiHistory.push(client.currentScreen);
 		}
 	}
 
@@ -224,7 +208,8 @@ public class EmiApi {
 
 	private static List<EmiRecipe> pruneUses(List<EmiRecipe> list, EmiIngredient context) {
 		return list.stream().filter(r -> {
-			return r.getInputs().stream().anyMatch(i -> containsAll(i, context)) || r.getCatalysts().stream().anyMatch(i -> containsAll(i, context));
+			return r.getInputs().stream().anyMatch(i -> containsAll(i, context))
+				|| r.getCatalysts().stream().anyMatch(i -> containsAll(i, context));
 		}).sorted((a, b) -> getSmallestPresence(a, context) - getSmallestPresence(b, context)).collect(Collectors.toList());
 	}
 
@@ -265,29 +250,25 @@ public class EmiApi {
 
     @SideOnly(Side.CLIENT)
 	private static void setPages(Map<EmiRecipeCategory, List<EmiRecipe>> recipes, EmiIngredient stack) {
-		recipes = recipes.entrySet().stream().filter(e -> !e.getValue().isEmpty()).collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue()));
+		recipes = recipes.entrySet().stream().filter(e -> !e.getValue().isEmpty())
+			.collect(Collectors.toMap(e -> e.getKey(), e -> e.getValue()));
 		if (!recipes.isEmpty()) {
 			EmiSidebars.lookup(stack);
 			if (getHandledScreen() == null) {
 				//noinspection RedundantCast
-				Minecraft.getMinecraft().displayGuiScreen(new GuiInventory((EntityPlayer) (Object) Minecraft.getMinecraft().thePlayer));
+				client.displayGuiScreen(new GuiInventory((EntityPlayer) (Object) client.thePlayer));
 			}
-			GuiScreen s = Minecraft.getMinecraft().currentScreen;
-			if (s instanceof GuiContainer) {
-				GuiContainer hs = (GuiContainer) s;
+			GuiScreen s = client.currentScreen;
+			if (s instanceof GuiContainer hs) {
 				push();
-				Minecraft.getMinecraft().displayGuiScreen(new RecipeScreen(hs, recipes));
-			}
-			else if (s instanceof BoMScreen) {
-				BoMScreen bs = (BoMScreen) s;
+				client.displayGuiScreen(new RecipeScreen(hs, recipes));
+			} else if (s instanceof BoMScreen bs) {
 				push();
-				Minecraft.getMinecraft().displayGuiScreen(new RecipeScreen(bs.old, recipes));
-			}
-			else if (s instanceof RecipeScreen) {
-				RecipeScreen rs = (RecipeScreen) s;
+				client.displayGuiScreen(new RecipeScreen(bs.old, recipes));
+			} else if (s instanceof RecipeScreen rs) {
 				push();
 				RecipeScreen n = new RecipeScreen(rs.old, recipes);
-				Minecraft.getMinecraft().displayGuiScreen(n);
+				client.displayGuiScreen(n);
 				n.focusCategory(rs.getFocusedCategory());
 			}
 		}
